tests/e2e/pass/m48_bounds_array.ep
# EXIT: 1
# STDOUT: Epic runtime error: index out of bounds
fun main(): void {
    let values = new i64[]
    push(values, 7)
    values[len(values)] = 9
}
