tests/e2e/fail/narrow_subscript.ep
# COMPILE_ERROR: subscript requires i64, got u8
fun main(): void {
    let values = new i64[1]
    print(itoa(values[0u8]))
}
